--- a/src/components/shared/IdleSearchField.css
+++ b/src/components/shared/IdleSearchField.css
@@ -15,7 +15,7 @@
   -moz-appearance: none;
   border: 0.5px solid #AAA;
   margin: 0;
-  padding: 0 2px 0 17px;
+  padding: 0 20px 0 17px; /* right padding for the reset button, left padding for the search icon */
   border-radius: 2px;
   box-shadow: inset 0 0 0.5px rgba(0,0,0,0.15), 0 0 0.5px rgba(0,0,0,0.1);
   background: url(../../../res/searchfield-icon.svg) 3px center no-repeat white;
